--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "backend",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "serverless-dynamodb-local": "^0.2.35",
+    "serverless-python-requirements": "^5.1.1"
+  },
   "devDependencies": {
-    "serverless": "^1.80.0",
+    "serverless": "^2.52.0",
     "serverless-offline": "^6.9.0"
   }
 }
